# Prime_TTT

./: .gitignore  README.md  pyproject.toml
analysis/: __init__.py
baselines/: __init__.py
configs/: llama8b_ruler4k_stage1.yaml  local_llama8b_niah_stage1.yaml
data/: __init__.py  build_niah.py  longbench_v2.py  paths.py  ruler.py
docs/: generate_relpt_report.py  relpt_report.html  relpt_report.md
eval/: run_eval.py  stats.py
primettt/: __init__.py  features.py  hypernetwork.py  inference.py  inner_loop.py  io.py  lora.py  losses.py  model_loader.py  stage1_oracles.py  stage2_warmup.py  stage3_maml.py
release/: README.md
scripts/: run_stage1_oracles.sh
slurm/: submit_primettt_package_smoke.slurm
tests/: test_core.py
transfer/: __init__.py  canonicalize.py
